--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>akka-slf4j_${scala.version}</artifactId>
             <version>2.5.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.24</version>
+        </dependency>
     </dependencies>
     
     <build>
